--- a/public/index.html
+++ b/public/index.html
@@ -50,9 +50,8 @@
 
           <a class="btn btn-success btn-xs pull-right navbar-btn" href="https://github.com/listingslab/spokenNumberify/blob/master/src/validate.js" target="_blank" role="button">validate.js</a>
 
-          <a class="btn btn-success btn-xs pull-right navbar-btn" href="https://github.com/listingslab/spokenNumberify/blob/master/src/main.js" target="_blank" role="button">main.ts</a>
+          <a class="btn btn-success btn-xs pull-right navbar-btn" href="https://github.com/listingslab/TypeScriptTickerGrid/blob/master/src/main.ts" target="_blank" role="button">Main.ts</a>
 
-          
 
         </div><!--/.navbar-collapse -->
       </div>
