Update the index page

--- a/public/index.html
+++ b/public/index.html
@@ -82,10 +82,18 @@
       <div class="row">
         
         <div class="col-md-4">
-          <h2>The Task</h2>
-          <b><p>Implement a financials ticker grid in TypeScript using the CSV data provided.
+          <h2>Brief</h2>
+          <p><b>Implement a financials ticker grid in TypeScript using the CSV data provided.</b></p>
 
-The code should be written in an OO style. Any CSS written should use BEM notation. Do not use any 3rd party frameworks or libraries.</p></b>
+<p>The code should be written in an OO style. Do not use any 3rd party frameworks or libraries.</p>
+
+<p>Load and parse the data in snapshot.csv into a model. Render a grid based on that data to the DOM. Write an engine to work through deltas.csv and emit update messages to parse.</p>
+
+<p>When only a number exists on a line, that amount of time in milliseconds should be waited until processing the next set of deltas. When the last set of deltas is processed, return to the start of the file and repeat.</p>
+
+<p>Each set of deltas should be merged into the existing dataset and then propagated to the DOM in the most efficient manner possible.</p>
+
+<p>Provide notification that an item has been updated via a visual flare in the UI.</p>
 
         <p></p>
 
@@ -95,8 +103,8 @@ The code should be written in an OO style. Any CSS written should use BEM notati
         <div class="col-md-4">
           <div class="panel panel-default">
             <div class="panel-body fixed-panel">
-              <h3>1. </h3>
-              <p></p>
+              <h3>1. TypeScript Module</h3>
+              <p>We created a TypeScript module called TickerGrid</p>
             </div>
           </div>
         </div>
@@ -105,7 +113,7 @@ The code should be written in an OO style. Any CSS written should use BEM notati
           <div class="panel panel-default">
             <div class="panel-body">
               <h3>2. CSS Animation</h3>
-              <p>Notification that an item has been updated via a visual flare in the UI. Is handledes by <a href="css/style.css" target="_blank">CSS</a>, offloading animation logic to the browser itself, which is efficient at.</p>
+              <p>Notification that an item has been updated via a visual flare in the UI is handled by <a href="css/style.css" target="_blank">CSS</a>, thus offloading animation logic to the browser itself, which it is efficient at.</p>
             </div>
         </div>
       </div>
@@ -115,7 +123,7 @@ The code should be written in an OO style. Any CSS written should use BEM notati
       <hr>
 
       <footer>
-        <p>&copy; listingslab | <a href="http://jqueryresume.com/spokennumberify/">spokennumberify</a></p>
+        <p>&copy; listingslab | more? <a href="http://jqueryresume.com/spokennumberify/">SpokenNumberify</a></p>
       </footer>
     </div> <!-- /container -->        
 
