--- a/public/index.html
+++ b/public/index.html
@@ -104,16 +104,47 @@
           <div class="panel panel-default">
             <div class="panel-body fixed-panel">
               <h3>1. TypeScript Module</h3>
-              <p>We created a TypeScript module called TickerGrid</p>
+              <p>The internal module encapsulates the functionality, and prevents pollution of the global namespace.</p>
+
+              <p>Aside from the Main class, which is entry point to the application, TickerGrid comprises a View class, a Model Class and an interface called iCompany.</p>
+
+              <p>These are all compiled into a single JavaScript file called tickergrid.js</p>
             </div>
+          </div>
+        </div>
+
+
+        <div class="col-md-4">
+          <div class="panel panel-default">
+            <div class="panel-body fixed-panel">
+              <h3>2. Model Class</h3>
+
+              <p>The Model handles the loading, storage and parsing of the data. It's first job is to load the snapshot file, parse it into an array of Company objects and then send a message to the View to render the grid to the DOM.</p>
+              <p>The second part of the model's job is to provide an engine to process the deltas, update the Company objects with new data and then communicate those changes to the View to be shown in the UI.</p>
+
+              </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="panel panel-default">
+            <div class="panel-body fixed-panel">
+              <h3>3. View Class</h3>
+              <p>The view's job is to interact with the DOM as efficiently as possible using the Model's data. The approach I've taken is to create and render a table to an existing div on the page.</p>
+
+              <p>When the Model emits a message to update a row, the view class creates a new 'tr' element and replaces the old row with the new element.</p>
+              </div>
           </div>
         </div>
 
         <div class="col-md-4">
           <div class="panel panel-default">
             <div class="panel-body">
-              <h3>2. CSS Animation</h3>
+              <h3>4. CSS Animation</h3>
+
               <p>Notification that an item has been updated via a visual flare in the UI is handled by <a href="css/style.css" target="_blank">CSS</a>, thus offloading animation logic to the browser itself, which it is efficient at.</p>
+
+              <p>I wanted to try out the CSS3 @keyframes technique because I used to be a Flash Developer and was interested to discover more options for making a UI look and feel great.</p>
             </div>
         </div>
       </div>
