Optimising the View class

--- a/public/index.html
+++ b/public/index.html
@@ -68,9 +68,7 @@
       <div class="container">
         <h1>TypeScript TickerGrid</h1>
         
-        <div id="tickergrid">
-          tickergrid
-        </div>
+        <div id="tickergrid"></div>
 
       </div>
     </div>
