--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
 	<head>
-		<title>TypeScript TickerGrid (Vanilla Version)</title>
+		<title>TypeScript TickerGrid</title>
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		
-		<h1>TypeScript TickerGrid (Vanilla Version)</h1>
+		
 
-		<div id="tickergrid"></div>
+		<div id="tickergrid">
+
+			<h1>TypeScript TickerGrid</h1>
+
+			<div id="tickergrid__grid" class="rounded-corners"></div>
+
+
+		</div>
 
 		<script type="text/javascript" src="js/tickergrid.js"></script>
 	        <script type="text/javascript">
@@ -18,9 +25,8 @@
 	            };
 	        </script>
 
-	        <a href="https://github.com/listingslab/TypeScriptTickerGrid" target="_blank">
-	        <img src="img/github.png" align="top" height="20"></a>
-	        <a href="index_pretty.html">Prettyfied Version</a>
+	        <!--<a href="https://github.com/listingslab/TypeScriptTickerGrid" target="_blank">
+	        <img src="img/github.png" align="top" height="20"></a>-->
 
 
 	</body>
