Renamed View to Grid and added Chart & Company Classes

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,8 @@
 		<div id="tickergrid">
 
 			<h1>TypeScript TickerGrid</h1>
-
-			<div id="tickergrid__grid" class="rounded-corners"></div>
-
+			<div id="tickergrid__grid" class="tickergrid-corners"></div>
+			<canvas id="tickergrid__chart" width="590" height="220" class="tickergrid-corners"></canvas>
 
 		</div>
 
