--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,11 @@
 		<div id="tickergrid">
 
 			<h1>TypeScript TickerGrid</h1>
+			<button id="btn__pause">pause/play</button>
 			<canvas id="tickergrid__chart" width="590" height="220" class="tickergrid-corners"></canvas>
 			<div id="tickergrid__grid" class="tickergrid-corners"></div>
+
+			
 
 		</div>
 
