--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,10 @@
 		<div id="tickergrid">
 
 			<h1>TypeScript TickerGrid</h1>
-			<button id="btn__pause">pause/play</button>
-			<canvas id="tickergrid__chart" width="590" height="220" class="tickergrid-corners"></canvas>
 			<div id="tickergrid__grid" class="tickergrid-corners"></div>
+			<canvas id="tickergrid__chart" width="590" height="220" class="tickergrid-corners"></canvas>
 
-			
+			<p>The chart component is a bit experimental at the moment. It needs a lot of work</p>
 
 		</div>
 
