--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
 			<h1>TypeScript TickerGrid</h1>
 			<div id="tickergrid__grid" class="tickergrid-corners"></div>
 			<canvas id="tickergrid__chart" width="590" height="220" class="tickergrid-corners"></canvas>
-
+			<a href="https://github.com/listingslab/TypeScriptTickerGrid" target="_blank">
+				<img src="/img/github.png" title="view code on Github">
+			</a>
 			<p>The chart component is a bit experimental at the moment. It needs a lot of work</p>
 
 		</div>
