Add original test

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,16 @@
 
 		<div id="tickergrid">
 
-			<h1>TypeScript TickerGrid</h1>
+			<h1>
+			<a href="https://github.com/listingslab/TypeScriptTickerGrid" target="_blank">
+				<img height="25" align="top" src="/img/github.png" title="view code on Github">
+			
+				TypeScript TickerGrid
+			</a>
+			</h1>
 			<div id="tickergrid__grid" class="tickergrid-corners"></div>
 			<canvas id="tickergrid__chart" width="590" height="220" class="tickergrid-corners"></canvas>
-			<a href="https://github.com/listingslab/TypeScriptTickerGrid" target="_blank">
-				<img src="/img/github.png" title="view code on Github">
-			</a>
-			<p>The chart component is a bit experimental at the moment. It needs a lot of work</p>
+			
 
 		</div>
 
